@@ -1702,6 +1702,17 @@ of both. Use them only when you need to have a largenormous area with
 not much going on, like a planet-girdling wilderness that surrounds
 your more standard areas, for instance.</td>
     </tr>
+    <tr>
+      <td>SubThinInstance</td>
+      <td>Like a Standard Thin Instance, but with a name requirement.
+&nbsp;If the name of the SubThinInstance has an underscore followed by
+the name of an existing normal area, or a word followed by a space
+followed by the name of an existing area, then this instance will be a
+thin copy of the area whose
+name follows. &nbsp;For example, "New_Midgaard" or "New Midgaard" would
+create a thin
+version of Midgaard.</td>
+    </tr>
   </tbody>
 </table>
 <br>
